<resources>
    <string name="app_name">SimpleMap</string>
    <string name="toast_requires_permission">This application requires permission %s</string>
    <string name="bt_click">Search</string>

    <string name="cb_j1">海鮮系</string>
    <string name="cb_j2">焼肉</string>
    <string name="cb_j3">焼き鳥</string>
    <string name="cb_j4">麺類</string>
    <string name="cb_j5">中華</string>
    <string name="cb_j6">イタリアン</string>
    <string name="cb_j7">カレー</string>
    <string name="cb_j8">カフェ･デザート</string>
    <string name="cb_j9">ファミレス</string>
</resources>
